--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -11,8 +11,8 @@
 nav.header a{
     text-decoration: none;
     color: #ffffff;
-    margin-left: 30px;
+    margin-left: 32px;
 }
 nav.header a:hover{
-    color: orange;
+    color: #ffa500;
 }
