--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -1,8 +1,12 @@
 .cart{
     background-color: rgba(255, 153, 0, 0.30);
-    padding: 25px;  
+    padding: 25px;
+    position: sticky;
+    top: 0;
+    height: 6%;  
 }
 .cart h4{
+    text-align: center;
     font-family: Lato;
     font-size: 25px;
     font-weight: 400;
